<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        
        android:background="#ffffff"
        android:layout_alignParentBottom="false"
        >
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="5dp"
        
        android:background="#EFEFEF"
        android:layout_alignParentBottom="false"
        >
        
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
             android:textStyle="bold"
            android:text="@string/cse"
            android:textColor="#076727"
            android:background="#EFEFEF"
            android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/all_doubts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#EFEFEF"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >

       

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
             android:textStyle="italic"
            android:text="How to change text background in android?"
           
            android:textSize="18sp" />

        

	           
	        
	                    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        >
	            <Button
	                android:id="@+id/post_doubt_btn" 
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	                android:background="#076727"
	                android:layout_marginRight="2dp"
	                android:text="Post a Question"
	                />
        		<Button 
        		    android:id="@+id/more_btn"
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	               android:background="#076727"
	                android:text="More"
	                />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

</LinearLayout>
</LinearLayout>
    
     
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="5dp"
        android:background="#EFEFEF"
        android:layout_alignParentBottom="false"
        >
        
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
             android:textStyle="bold"
            android:text="@string/ece"
            android:textColor="#076727"
            android:background="#EFEFEF"
            android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/all_doubts1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#EFEFEF"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >

       

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
             android:textStyle="italic"
            android:text="How to change text background in android?"
           
            android:textSize="18sp" />

        

	           
	        
	                    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        >
	            <Button
	                android:id="@+id/post_doubt_btn1" 
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	                android:background="#076727"
	                android:layout_marginRight="2dp"
	                android:text="Post a Question"
	                />
        		<Button 
        		    android:id="@+id/more_btn1"
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	               android:background="#076727"
	                android:text="More"
	                />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

</LinearLayout>
</LinearLayout>

     
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="#EFEFEF"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="false"
        >
        
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
             android:textStyle="bold"
            android:text="@string/ise"
            android:textColor="#076727"
            android:background="#EFEFEF"
            android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/all_doubts2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#EFEFEF"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >

       

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
             android:textStyle="italic"
            android:text="How to change text background in android?"
           
            android:textSize="18sp" />

        

	           
	        
	                    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        >
	            <Button
	                android:id="@+id/post_doubt_btn2" 
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	                android:background="#076727"
	                android:layout_marginRight="2dp"
	                android:text="Post a Question"
	                />
        		<Button 
        		    android:id="@+id/more_btn2"
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	               android:background="#076727"
	                android:text="More"
	                />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

</LinearLayout>
</LinearLayout>

     
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="5dp"
        android:background="#EFEFEF"
        android:layout_alignParentBottom="false"
        >
        
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
             android:textStyle="bold"
            android:text="@string/mech"
            android:textColor="#076727"
            android:background="#EFEFEF"
            android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/all_doubts3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#EFEFEF"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >

       

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
             android:textStyle="italic"
            android:text="How to change text background in android?"
           
            android:textSize="18sp" />

        

	           
	        
	                    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        >
	            <Button
	                android:id="@+id/post_doubt_btn3" 
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	                android:background="#076727"
	                android:layout_marginRight="2dp"
	                android:text="Post a Question"
	                />
        		<Button 
        		    android:id="@+id/more_btn3"
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	               android:background="#076727"
	                android:text="More"
	                />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

</LinearLayout>
</LinearLayout>

     
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="15dp"
        android:background="#EFEFEF"
        android:layout_alignParentBottom="false"
        >
        
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
             android:textStyle="bold"
            android:text="@string/eee"
            android:textColor="#076727"
            android:background="#EFEFEF"
            android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/all_doubts4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#EFEFEF"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >

       

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
             android:textStyle="italic"
            android:text="How to change text background in android?"
           
            android:textSize="18sp" />

        

	           
	        
	                    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        >
	            <Button
	                android:id="@+id/post_doubt_btn4" 
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	                android:background="#076727"
	                android:layout_marginRight="2dp"
	                android:text="Post a Question"
	                />
        		<Button 
        		    android:id="@+id/more_btn4"
	                android:layout_width="0dp"
	                android:layout_height="40dp"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#ffffff"
	                android:gravity="center_horizontal"
	                android:paddingTop="8dp"
	                android:paddingBottom="5dp"
	               android:background="#076727"
	                android:text="More"
	                />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

</LinearLayout>
</LinearLayout>
    
    
    
  <!--   <Button 
        android:id="@+id/add_poll"
        style="@style/btn_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="Add Poll"
        android:layout_alignParentBottom="true"
        />-->
 
 </LinearLayout>

</RelativeLayout>
</ScrollView>
